--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <div class="main-block">Block 1</div>
         <div class="main-block">Block 2</div>
         <div class="main-block">Block 3</div>
+        <div class="main-block">Block 4</div>
     </main>
 
     <aside class="sidebar-right">
